language/tests/error/ParseError01.hashem
bebin azinja() {
  bede -1;
}
